<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".activities.SettingsActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            app:title="Settings"
            app:navigationIcon="@drawable/back_icon_white"


            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="40dp"
/>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                tools:context=".activities.SettingsActivity">

                <TextView
                    android:id="@+id/touch"
                    android:layout_width="261dp"
                    android:layout_height="65dp"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/touch_title"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="261dp"
                    android:layout_height="65dp"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/language_title"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/units"
                    android:layout_width="261dp"
                    android:layout_height="65dp"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/unit_title"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/simulator_section" />

                <TextView
                    android:id="@+id/sound"
                    android:layout_width="261dp"
                    android:layout_height="65dp"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/sound_title"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/general_section" />

                <Switch
                    android:id="@+id/sound_switch"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sound"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sound" />

                <Switch
                    android:id="@+id/touch_switch"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/touch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/touch" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sound"
                    tools:background="@color/colorPrimaryDark" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/units"
                    tools:background="@color/colorPrimaryDark" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:background="@color/colorPrimaryDark" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:entries="@array/language_array"
                    app:layout_constraintBottom_toBottomOf="@+id/language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/language" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:entries="@array/unit_array"
                    app:layout_constraintBottom_toBottomOf="@+id/units"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/units" />

                <TextView
                    android:id="@+id/general_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/general_settings_title"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/simulator_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="10dp"
                    android:text="@string/simulator_settings_title"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    tools:background="@color/colorAccent" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu"

        />

</android.support.v4.widget.DrawerLayout>